force-app/main/default/objects/GsGoalPeriod__c/GsGoalPeriod__c.object-meta.xml
<CustomObject>
    <description>A goal period defines the period for which goals are created, maintained and tracked. Each period is divided into an edit phase and the goal tracking phase.</description>
    <label>Goal Period</label>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>