force-app/main/default/objects/GsGoalPeriod__c/fields/EditPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>EditPeriodEnd__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 12, 31)</defaultValue>
    <description>The date after which the goals cannot be edited anymore.</description>
    <label>Edit Period End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>