force-app/main/default/objects/GsGoalPeriod__c/fields/EditPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>EditPeriodStart__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 8, 31)</defaultValue>
    <description>The date after which the Editing period for this years goals starts.</description>
    <inlineHelpText>This has to be before the editing end date.</inlineHelpText>
    <label>Edit Period Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>