force-app/main/default/objects/GsGoalPeriod__c/fields/GsSharePointCreated__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointCreated__c</fullName>
    <description>Legacy field to store Created On of migrated goal periods</description>
    <label>SharePoint Created</label>
    <type>DateTime</type>
</CustomField>