force-app/main/default/objects/GsGoalPeriod__c/fields/GsSharePointCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointCreatedBy__c</fullName>
    <description>Legacy field to store Created By of migrated goal periods</description>
    <label>SharePoint Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>