force-app/main/default/objects/GsGoalPeriod__c/fields/GsSharePointId__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointId__c</fullName>
    <description>Legacy field to store Id of migrated goal periods</description>
    <externalId>true</externalId>
    <label>SharePoint Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>