force-app/main/default/objects/GsGoalPeriod__c/fields/GsSharePointModified__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointModified__c</fullName>
    <description>Legacy field to store Modified On of migrated goal periods</description>
    <label>SharePoint Modified</label>
    <type>DateTime</type>
</CustomField>