force-app/main/default/objects/GsGoalPeriod__c/fields/GsSharePointModifiededBy__c.field-meta.xml
<CustomField>
    <fullName>GsSharePointModifiededBy__c</fullName>
    <description>Legacy field to store Modified By of migrated goal periods</description>
    <label>SharePoint Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>