force-app/main/default/objects/GsGoalPeriod__c/fields/Last_Modified_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_On__c</fullName>
    <description>This is the last date something got changed in this year.</description>
    <formula>NOW()</formula>
    <label>Last Modified On</label>
    <type>DateTime</type>
</CustomField>