force-app/main/default/objects/GsGoalPeriod__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The goals for this period are locked.</description>
    <inlineHelpText>The goals for this period cannot be edited anymore if it is locked.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>