force-app/main/default/objects/GsGoalPeriod__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <defaultValue>DATE(YEAR(TODAY())+1, 12, 31)</defaultValue>
    <description>The end date of the goal tracking period.</description>
    <inlineHelpText>Goals should be reached before this date.</inlineHelpText>
    <label>Period End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>