force-app/main/default/objects/GsGoalPeriod__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <defaultValue>DATE(YEAR(TODAY())+1, 1, 1)</defaultValue>
    <description>The date at which the tracking of goals starts.</description>
    <inlineHelpText>Goals should be reached after this date.</inlineHelpText>
    <label>Period Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>