force-app/main/default/objects/GsGoalPeriod__c/validationRules/EditEndDateGreaterThanEditStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EditEndDateGreaterThanEditStartDate</fullName>
    <active>true</active>
    <description>The edit end date must be later than the edit start date.</description>
    <errorConditionFormula>OR(EditPeriodEnd__c &lt;  EditPeriodStart__c )</errorConditionFormula>
    <errorDisplayField>EditPeriodEnd__c</errorDisplayField>
    <errorMessage>The edit end date must be greater than the edit start date.</errorMessage>
</ValidationRule>