force-app/main/default/objects/GsGoalPeriod__c/validationRules/PeriodEndDateGreaterThanPeriodStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>PeriodEndDateGreaterThanPeriodStartDate</fullName>
    <active>true</active>
    <description>The period end date must be later than the period start date.</description>
    <errorConditionFormula>OR( Period_End__c &lt;   Period_Start__c )</errorConditionFormula>
    <errorDisplayField>Period_End__c</errorDisplayField>
    <errorMessage>The period end date must be greater than the period start date.</errorMessage>
</ValidationRule>