force-app/main/default/objects/GsGoalPeriod__c/validationRules/YearMustbeNumerical.validationRule-meta.xml
<ValidationRule>
    <fullName>YearMustbeNumerical</fullName>
    <active>true</active>
    <description>Checks wether the year is a number</description>
    <errorConditionFormula>OR(LEN(Name)!= 4, NOT(ISNUMBER(Name)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The year is not a number.</errorMessage>
</ValidationRule>