force-app/main/default/objects/GsGoalPeriod__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EditPeriodStart__c</columns>
    <columns>EditPeriodEnd__c</columns>
    <columns>Period_Start__c</columns>
    <columns>Period_End__c</columns>
    <columns>Locked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>